# tidehunter

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: benchmark-config-4k-zipf2.yml
.github/workflows/: benchmarks.yaml  concurrent-test.yaml  rust-tests.yaml
benchmarks/benchmark/: Cargo.toml
benchmarks/benchmark/src/: configs.rs  main.rs  metrics.rs  prometheus.rs
benchmarks/benchmark/src/storage/: mod.rs  rocks.rs  tidehunter.rs
benchmarks/index_benchmark/: Cargo.toml  README.md
benchmarks/index_benchmark/src/: main.rs
benchmarks/random_access_speed_test/: Cargo.toml
benchmarks/random_access_speed_test/src/: main.rs
benchmarks/read_window_test/: Cargo.toml
benchmarks/read_window_test/src/: main.rs
benchmarks/wal_benchmark/: Cargo.toml
benchmarks/wal_benchmark/src/: main.rs
docs/: snapshot_mechanism.md  two_level_lsm_design.md  wal_inspector_migration.md
orchestrator/: Cargo.toml  readme.md
orchestrator/assets/: grafana-dashboard.json  plot.py  settings-template.yml  settings.yml  target_configs.yml
orchestrator/assets/results/: measurements-sample-0.json  measurements-sample-1.json
orchestrator/src/: benchmark.rs  collector.rs  error.rs  logs.rs  main.rs  monitor.rs  orchestrator.rs  settings.rs
orchestrator/src/client/: aws.rs  custom.rs  mod.rs
orchestrator/src/protocol/: mod.rs  target.rs
scripts/: aggregate.py  aggregate.sh  benchmark_all.sh  generate.sh  generate_target_configs.py  grafana_cloud_dashboard.json  plot_mixed_bench.py  plot_results.py  rename.sh  run.sh  summarize_benchmarks.py
scripts/generate_target_configs/: Cargo.toml
scripts/generate_target_configs/src/: main.rs
src/: config.rs  db.rs  file_reader.rs  flusher.rs  index_table.rs  large_table.rs  lib.rs  main.rs  persisted_index.rs  stress.rs  wal.rs
src/benchmarks/: index_benchmark.rs  mod.rs
src/index/: index_format.rs  index_table.rs  lookup_header.rs  microcell.rs  mod.rs  persisted_index.rs  single_hop.rs  uniform_lookup.rs
tests/concurrent_test/: Cargo.toml
tests/concurrent_test/src/: main.rs
tidehunter/: Cargo.toml
tidehunter/benches/: index_insert_benchmarks.rs  index_iter_benchmarks.rs  large_table_benchmarks.rs  wal_allocator_benchmarks.rs
tidehunter/src/: batch.rs  budget.rs  cell.rs  checkpoint.rs  compressed_batch.rs  config.rs  container.rs  context.rs  control.rs  crc.rs  db.rs  failpoints.rs  file_reader.rs  flusher.rs  key_shape.rs  large_table.rs  latch.rs  lib.rs  lock.rs  lookup.rs  math.rs  metrics.rs  replay_buffer.rs  state_snapshot.rs  thread_util.rs  wal.rs  wal_replay.rs  wal_tracker.rs
tidehunter/src/db_tests/: concurrent_test.rs  db_tests.rs  generate.py  generate.sh  generated.rs  test_add_keyspace.rs  test_reorder_keyspace.rs
tidehunter/src/index/: index_format.rs  index_table.rs  levels.rs  lookup_header.rs  mod.rs  pending_table.rs  uniform_lookup.rs  utils.rs
tidehunter/src/index/index_table/: flat.rs  mod.rs
tidehunter/src/iterators/: db_iterator.rs  mod.rs
tidehunter/src/primitives/: arc_cow.rs  cursor.rs  lru.rs  mod.rs  range_from_excluding.rs  sharded_mutex.rs  slice_buf.rs  var_int.rs
tidehunter/src/relocation/: cell_reference.rs  mod.rs  relocation_tests.rs  updates.rs  watermark.rs
tidehunter/src/runtime/: mod.rs
tidehunter/src/wal/: allocator.rs  files.rs  layout.rs  mapper.rs  mod.rs  position.rs  syncer.rs  tracker.rs  tracking_mmap.rs
tools/tideconsole/: Cargo.toml  README.md  build.rs
tools/tideconsole/benches/: wal_walk.rs
tools/tideconsole/src/: engine.rs  main.rs  tests.rs
tools/tideconsole/src/engine/: control_region.rs  db_fns.rs  mod.rs  util.rs  verify.rs  wal.rs
tools/tideconsole/src/tests/: control_region_tests.rs  db_tests.rs  mod.rs  rhai_generated_tests.rs  verify_tests.rs  wal_tests.rs
tools/tideconsole/src/tests/rhai/: __common__.rhai  analyze_ks_fields.rhai  delete_existing_key.rhai  exists_deleted_key.rhai  exists_missing_key.rhai  exists_present_key.rhai  force_snapshot_returns_position.rhai  get_deleted_key.rhai  get_existing_key.rhai  get_missing_key.rhai  integer_ks_id.rhai  load_cr_structure.rhai  load_cr_valid_cells.rhai  load_index_invalid_offset.rhai  put_and_get.rhai  scan_counts_live_records.rhai  scan_returns_hex_key_and_value.rhai  scan_with_lower_and_upper_bound.rhai  scan_with_lower_bound.rhai  unknown_ks_name_error.rhai  verify_clean_db.rhai  verify_verified_equals_total.rhai  walk_wal_entry_counts.rhai  walk_wal_filter_by_keyspace.rhai  walk_wal_from_position.rhai  walk_wal_record_fields.rhai  walk_wal_remove_keys.rhai
tools/wal_inspector/: Cargo.toml
tools/wal_inspector/src/: analyze_ks.rs  control_region_tool.rs  force_snapshot.rs  main.rs  stat.rs  utils.rs  verify.rs
tools/wal_verifier/: Cargo.toml
tools/wal_verifier/src/: main.rs
