[workspace]
members = [
    "tidehunter",
    "benchmarks/random_access_speed_test",
    "benchmarks/benchmark",
    "benchmarks/read_window_test",
    "benchmarks/index_benchmark",
]
resolver = "2"

[workspace.dependencies]
rand = "0.8.5"
parking_lot = "0.12.3"
prometheus = "0.13.3"
bytes = "1.7.1"
libc = "0.2.169"
