[package]
name = "orchestrator"
version = "0.0.1"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tidehunter = { path = "../tidehunter" }
benchmark = { path = "../benchmarks/benchmark" }
aws-config = "1.5.1"
aws-runtime = "1.2.3"
aws-sdk-ec2 = "1.51.1"
chrono = "0.4"
clap = { version = "4.2.0", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
eyre = "0.6.8"
futures = "0.3.28"
glob = "0.3.1"
plotters = "0.3.4"
prettytable-rs = "0.10"
prometheus-http-query = "0.8.3"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.88"
serde_with = "3.8.1"
serde_yaml = "0.9.33"
ssh2 = "0.9.4"                                         # TODO: remove this dependency
thiserror = "1.0.38"
tokio = { version = "1.28.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.6.0"

[[bin]]
name = "orchestrator"
path = "src/main.rs"
