[package]
name = "tidehunter"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.6.0"
memmap2 = "0.7.0"
minibytes = { path = "../third-party/minibytes", default-features = false, features = ["frommmap", "frombytes"] }
smallvec = { version = "1.13.2", features = ["serde"] }
parking_lot = { workspace = true, features = ["arc_lock"] }
crc32fast = "1.3.2"
bytes = {workspace = true}
bincode = "1.3.3"
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.21"
rand = {workspace = true}
prometheus = {workspace = true}
tokio = { version = "1.36.0", features = ["full"], optional = true}
bloom = "0.3.2"
lru = "0.12.2"
blake2 = { version = "0.10.6" }
rayon = "1.5.3"
libc = {workspace = true}
typenum = "1.16.0"
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
tempdir = "0.3.7"
hex-literal = "1.0.0"
parking_lot = {workspace = true, features = ["arc_lock"]}
hex = "0.4.3"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
tokio = ["dep:tokio"]
test_methods = []
test-utils = []

[[bench]]
name = "large_table_benchmarks"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "wal_allocator_benchmarks"
harness = false

[lints.clippy]
len_without_is_empty = "allow"
