[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
clap = { version = "4.5.32", features = ["derive"] }
tidehunter = { version = "0.1.0", path = "../../tidehunter" }
parking_lot = { workspace = true }
histogram = "0.11.3"
prometheus = { workspace = true }
bytes = { workspace = true }
axum = "0.6.18"
tempdir = "0.3.7"
tokio = { version = "1.44.1", features = ["full"] }
minibytes = { path = "../../third-party/minibytes", default-features = false, features = [
    "frommmap",
    "frombytes",
] }
rocksdb = { version = "0.21.0", default-features = false, features = [
    "snappy",
    "lz4",
    "zstd",
    "zlib",
    "multi-threaded-cf",
] }
anyhow = "1.0.97"
fs_extra = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
