[package]
name = "tideconsole"
version = "0.1.0"
edition = "2024"

[dependencies]
tidehunter = { path = "../../tidehunter", features = ["test-utils"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rhai = "1"
rustyline = "14"
hex = "0.4.3"
parking_lot = { workspace = true }

# Match sui-node's allocator so perf measurements (especially WAL replay)
# reflect production behavior. sui-node uses tikv-jemallocator 0.5 with the
# same features; see crates/sui-node/Cargo.toml in the sui repo.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "wal_walk"
harness = false
